# rust-realtime-chat

./: Cargo.toml
fuck_src1/: auth.rs  chat.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs  ws.rs
fuck_src1/templates/: base.html.tera  chat_room.html.tera  login.html.tera  register.html.tera  user_chats.html.tera
migrations/2024-10-06-101540_create_users/: up.sql
migrations/2024-10-06-101550_create_messages/: up.sql
migrations/2024-10-06-101557_create_files/: up.sql
migrations/2024-10-06-101744_create_chats/: up.sql
src/: auth.rs  db.rs  fairing.rs  files.rs  main.rs  messages.rs  models.rs  schema.rs  websockets.rs
templates/: base.html.tera  chat.html.tera  chats.html.tera  create_chat.html.tera  login.html.tera  register.html.tera  users.html.tera
