[package]
name = "Rust_lab_4"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "tls", "secrets"] }
rocket_csrf_token = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.11.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.15"
futures = "0.3"
diesel = { version = "2.2.4", features = ["sqlite", "r2d2", "serde_json", "chrono"] }
dotenv = "0.15"
async-std = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
futures-util = "0.3.30"
rand = "0.8.5"
tungstenite = "0.14.0"

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.4"
features = ["diesel_sqlite_pool"]

#[default]
#template_dir = "src/templates"

[default.databases]
sqlite_db = { url = "sqlite://db.sqlite", pool_size = 10, timeout = 5 }